# chardet-rust

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_COMPARISON.md  README.md  RUST_CONVERSION.md  RUST_TEST_RUNNER.md  SECURITY.md  benchmark_demo.py  compare_benchmark.py  pyproject.toml
.github/workflows/: ci.yml
docs/: RUST_CODE_DOCUMENTATION.md  changelog.rst  contributing.rst  faq.rst  how-it-works.rst  index.rst  rust_architecture.mmd  rust_pipeline.mmd  rust_sequence.mmd  usage.rst
rust/: .gitignore  Cargo.toml  pyproject.toml
rust/chardet_rs/: __init__.py
rust/src/: bigram_models.rs  detector.rs  enums.rs  equivalences.rs  equivalences_full.rs  lib.rs  models.rs  py.rs  registry.rs
rust/tests/: test_accuracy.rs  test_api.rs  test_ascii.rs  test_binary.rs  test_bom.rs  test_utf8.rs
src/: detector.rs  enums.rs  lib.rs  registry.rs
src/chardet/: __init__.py  _fallback.py  _utils.py  cli.py  detector.py  enums.py  exceptions.py  logging.py  universal_detector.py
src/chardet_rs/: __init__.py  _chardet_rs.abi3.so.bak
src/pipeline/: bom.rs  escape.rs  mod.rs  orchestrator.rs  statistical.rs  utf1632.rs  validity.rs
tests/: test_99_percent_coverage.py  test_accuracy.py  test_accuracy.rs  test_api.py  test_api.rs  test_ascii.rs  test_binary.rs  test_bom.rs  test_cli.py  test_cli_coverage.py  test_detector.py  test_detector_coverage.py  test_exceptions.py  test_final_coverage.py  test_fuzzing.py  test_logging_coverage.py  test_security_logging.py  test_utf8.rs  test_utils_coverage.py
(+14 files in other folders)
