[package]
name = "chardet-rs"
version = "0.1.12"
edition = "2021"
authors = ["Dan Blanchard <dan.blanchard@gmail.com>"]
license = "0BSD"
description = "Universal character encoding detector - Pure Rust implementation"
repository = "https://github.com/zopyx/chardet-rust"
keywords = ["encoding", "charset", "detection", "text", "i18n"]
categories = ["encoding", "text-processing"]

[lib]
name = "chardet_rs"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
encoding_rs = "0.8"
sha2 = "0.10"

[dev-dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "test_accuracy"
path = "tests/test_accuracy.rs"